fix button nums sliding out of container on iphone

--- a/css/styles.css
+++ b/css/styles.css
@@ -307,6 +307,7 @@ body.dark {
     }
 
     button {
+        padding:0;
         border-radius: 13px;
         width: 60px;
         height: 60px;
